--- a/Karnel/index.html
+++ b/Karnel/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Karnel Travel Guide</title>
     <link href="src/index.css" rel="stylesheet"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">-->
     <link href="animate/animate.min.css" rel="stylesheet"/>
     <link href="owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"/>
     <link href="tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet"/>
-    <link href="css/bootstrap.min.css" rel="stylesheet"/>
+<!--    <link href="css/bootstrap.min.css" rel="stylesheet"/>-->
   </head>
   <body>
     <div id="root"></div>
