--- a/Karnel/index.html
+++ b/Karnel/index.html
@@ -2,31 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/karnel.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Karnel Travel Guide</title>
-    <link href="src/index.css" rel="stylesheet"/>
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">-->
-    <link href="animate/animate.min.css" rel="stylesheet"/>
-    <link href="owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"/>
-    <link href="tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet"/>
+    <title>Karnel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet"/>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet"/>
-<!--    <link href="css/bootstrap.min.css" rel="stylesheet"/>-->
   </head>
   <body>
     <div id="root"></div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="wow/wow.min.js"></script>
-    <script src="easing/easing.min.js"></script>
     <script src="waypoints/waypoints.min.js"></script>
-    <script src="owlcarousel/owl.carousel.min.js"></script>
-    <script src="tempusdominus/js/moment.min.js"></script>
-    <script src="tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-    <script src="js/main.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
